fix:对每个页面都添加css规则: white-space:nowrap; overflow:hidden; 对负载率 四舍五入

--- a/src/pages/ProcessRecord/style.less
+++ b/src/pages/ProcessRecord/style.less
@@ -1,5 +1,8 @@
 	#main {
 		width: 100%;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
 		.button-area{
 			width: 100%;
 			padding: 10rpx;
@@ -98,6 +101,7 @@
 	// 时间格
 	.time {
 		width: 32%;
+		white-space: pre-wrap;
 	}
 
 	// 类型格
